import { render } from '@testing-library/react';
import React from 'react';
import { ThemeProvider, createTheme } from '@mui/material/styles';

import { Main } from '../main';
import sensibleDefaults from '../defaults';
import { createSlateMarkup, processMarkup } from '../markupUtils';

jest.mock('@pie-lib/config-ui', () => ({
  choiceUtils: {
    firstAvailableIndex: jest.fn(),
  },
  settings: {
    Panel: (props) => <div data-testid="settings-panel" {...props} />,
    toggle: jest.fn(),
    radio: jest.fn(),
    dropdown: jest.fn(),
  },
  layout: {
    ConfigLayout: (props) => <div data-testid="config-layout">{props.children}</div>,
  },
  InputContainer: (props) => <div data-testid="input-container">{props.children}</div>,
}));

jest.mock('@pie-lib/editable-html', () => ({
  __esModule: true,
  default: ({ markup, onChange }) => (
    <div data-testid="editable-html" onClick={() => onChange && onChange('new value')}>
      {markup}
    </div>
  ),
  ALL_PLUGINS: [],
}));

jest.mock('../ecr-toolbar', () => ({
  __esModule: true,
  default: (props) => <div data-testid="ecr-toolbar" {...props} />,
}));

jest.mock('../alternateResponses', () => ({
  __esModule: true,
  default: (props) => <div data-testid="alternate-responses" {...props} />,
}));

const theme = createTheme();

const model = {
  markup: '<p>The {{0}} jumped {{1}} the {{2}}</p>',
  disabled: false,
  choices: {
    0: [
      { label: 'cow', value: '0' },
      { label: 'cattle', value: '1' },
      { label: 'calf', value: '2' },
    ],
    1: [
      { label: 'over', value: '0' },
      { label: 'past', value: '1' },
      { label: 'beyond', value: '2' },
    ],
    2: [{ label: 'moon', value: '0' }],
  },
  maxLengthPerChoice: [6, 6, 4],
  prompt: 'Complete the sentence',
};

const prepareModel = (model = {}) => {
  const joinedObj = {
    ...sensibleDefaults.model,
    ...model,
  };
  const slateMarkup = joinedObj.slateMarkup || createSlateMarkup(joinedObj.markup, joinedObj.choices);
  const processedMarkup = processMarkup(slateMarkup);

  return {
    ...joinedObj,
    slateMarkup,
    markup: processedMarkup,
  };
};

describe('Main', () => {
  let onModelChanged = jest.fn();
  let onConfigurationChanged = jest.fn();

  beforeEach(() => {
    jest.clearAllMocks();
  });

  const renderMain = (extras = {}) => {
    const defaults = {
      onModelChanged,
      onConfigurationChanged,
      classes: {},
      model: prepareModel({
        ...model,
        ...extras,
      }),
      configuration: sensibleDefaults.configuration,
    };
    const props = { ...defaults };

    return render(
      <ThemeProvider theme={theme}>
        <Main {...props} />
      </ThemeProvider>
    );
  };

  describe('snapshot', () => {
    it('renders with teacher instructions, prompt and rationale even if not set', () => {
      const { container } = renderMain();
      expect(container).toMatchSnapshot();
    });

    it('renders without teacher instructions, prompt and rationale', () => {
      const { container } = renderMain({
        promptEnabled: false,
        teacherInstructionsEnabled: false,
        rationaleEnabled: false,
      });
      expect(container).toMatchSnapshot();
    });
  });

  describe('logic', () => {
    describe('onModelChange', () => {
      it('changes the model', () => {
        const testInstance = new Main({
          onModelChanged,
          onConfigurationChanged,
          classes: {},
          model: prepareModel(model),
          configuration: sensibleDefaults.configuration,
        });

        testInstance.onModelChange({ promptEnabled: false });

        expect(onModelChanged).toBeCalledWith({
          ...prepareModel(model),
          promptEnabled: false,
        });
      });
    });

    describe('onPromptChanged', () => {
      it('changes the prompt value', () => {
        const testInstance = new Main({
          onModelChanged,
          onConfigurationChanged,
          classes: {},
          model: prepareModel(model),
          configuration: sensibleDefaults.configuration,
        });

        testInstance.onPromptChanged('This is the new prompt');

        expect(onModelChanged).toBeCalledWith({
          ...prepareModel(model),
          prompt: 'This is the new prompt',
        });
      });
    });

    describe('onRationaleChanged', () => {
      it('changes the rationale value', () => {
        const testInstance = new Main({
          onModelChanged,
          onConfigurationChanged,
          classes: {},
          model: prepareModel(model),
          configuration: sensibleDefaults.configuration,
        });

        testInstance.onRationaleChanged('New Rationale');

        expect(onModelChanged).toBeCalledWith({
          ...prepareModel(model),
          rationale: 'New Rationale',
        });
      });
    });

    describe('onTeacherInstructionsChanged', () => {
      it('changes the teacher instructions value', () => {
        const testInstance = new Main({
          onModelChanged,
          onConfigurationChanged,
          classes: {},
          model: prepareModel(model),
          configuration: sensibleDefaults.configuration,
        });

        testInstance.onTeacherInstructionsChanged('New Teacher Instructions');

        expect(onModelChanged).toBeCalledWith({
          ...prepareModel(model),
          teacherInstructions: 'New Teacher Instructions',
        });
      });
    });

    describe('onMarkupChanged', () => {
      it('changes slate markup value', () => {
        const testInstance = new Main({
          onModelChanged,
          onConfigurationChanged,
          classes: {},
          model: prepareModel(model),
          configuration: sensibleDefaults.configuration,
        });

        const slateMarkup =
          '<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped</p>';

        testInstance.onMarkupChanged(slateMarkup);

        expect(onModelChanged).toBeCalledWith({
          ...prepareModel(model),
          slateMarkup,
        });
      });
    });

    describe('onResponsesChanged', () => {
      it('changes choices and slateMarkup as well', () => {
        const testInstance = new Main({
          onModelChanged,
          onConfigurationChanged,
          classes: {},
          model: prepareModel(model),
          configuration: sensibleDefaults.configuration,
        });

        const newChoices = {
          0: [
            { label: 'cow', value: '0' },
            { label: 'cattle', value: '1' },
            { label: 'calf', value: '2' },
          ],
          1: [
            { label: 'over', value: '0' },
            { label: 'past', value: '1' },
            { label: 'beyond', value: '2' },
          ],
          2: [{ label: 'sun', value: '0' }],
        };

        testInstance.onResponsesChanged(newChoices);

        expect(onModelChanged).toBeCalledWith({
          ...prepareModel(model),
          choices: newChoices,
        });
      });
    });

    describe('onChangeResponse', () => {
      it('with new area', () => {
        const testInstance = new Main({
          onModelChanged,
          onConfigurationChanged,
          classes: {},
          model: prepareModel(model),
          configuration: sensibleDefaults.configuration,
        });

        testInstance.onChangeResponse(3);

        expect(onModelChanged).toBeCalledWith(
          expect.objectContaining({
            choices: expect.objectContaining({
              ...model.choices,
              3: [{ label: '', value: '0' }],
            }),
            maxLengthPerChoice: expect.arrayContaining([6, 6, 4, 2]),
          }),
        );
      });

      it('with existing area', () => {
        const testInstance = new Main({
          onModelChanged,
          onConfigurationChanged,
          classes: {},
          model: prepareModel(model),
          configuration: sensibleDefaults.configuration,
        });

        testInstance.onChangeResponse(1, 'under');

        expect(onModelChanged).toBeCalledWith(
          expect.objectContaining({
            choices: expect.objectContaining({
              1: [
                { label: 'under', value: '0' },
                { label: 'past', value: '1' },
                { label: 'beyond', value: '2' },
              ],
            }),
          }),
        );
      });
    });

    describe('onChange', () => {
      // Note: The following tests for onChange test implementation details (setState callbacks)
      // that are difficult to test with RTL without full component rendering.
      // These should be tested through user interactions in integration tests instead.

      it.skip('slateMarkup and choices are updated with new area without data-value', () => {
        jest.useFakeTimers();

        const testInstance = new Main({
          onModelChanged,
          onConfigurationChanged,
          classes: {},
          model: prepareModel({
            choices: {
              0: [
                { label: 'cow', value: '0' },
                { label: 'cattle', value: '1' },
                { label: 'calf', value: '2' },
              ],
              1: [
                { label: 'over', value: '0' },
                { label: 'past', value: '1' },
                { label: 'beyond', value: '2' },
              ],
              2: [{ label: 'moon', value: '0' }],
            },
            maxLengthPerChoice: [6, 6, 4, 2],
          }),
          configuration: sensibleDefaults.configuration,
        });

        const newMarkup = `<p>The <span data-type="explicit_constructed_response" data-index="0" data-value="cow"></span> jumped <span data-type="explicit_constructed_response" data-index="1" data-value="over"></span> the <span data-type="explicit_constructed_response" data-index="2" data-value="moon"></span>and <span data-type="explicit_constructed_response" data-index="3"></span></p>`;

        testInstance.onChange(newMarkup);

        // Wait for setState callback
        jest.runAllTimers();

        expect(onModelChanged).toBeCalledWith(
          expect.objectContaining({
            slateMarkup: newMarkup,
            choices: expect.objectContaining({
              3: [{ label: '', value: '0' }],
            }),
          }),
        );

        jest.useRealTimers();
      });

      it.skip('slateMarkup and choices are updated with new area with data-value', () => {
        jest.useFakeTimers();

        const testInstance = new Main({
          onModelChanged,
          onConfigurationChanged,
          classes: {},
          model: prepareModel({
            choices: {
              0: [
                { label: 'cow', value: '0' },
                { label: 'cattle', value: '1' },
                { label: 'calf', value: '2' },
              ],
              1: [
                { label: 'over', value: '0' },
                { label: 'past', value: '1' },
                { label: 'beyond', value: '2' },
              ],
              2: [{ label: 'moon', value: '0' }],
            },
            maxLengthPerChoice: [6, 6, 4, 2],
          }),
          configuration: sensibleDefaults.configuration,
        });

        const newMarkup = `<p>The <span data-type="explicit_constructed_response" data-index="0" data-value="cow"></span> jumped <span data-type="explicit_constructed_response" data-index="1" data-value="over"></span> the <span data-type="explicit_constructed_response" data-index="2" data-value="moon"></span>and <span data-type="explicit_constructed_response" data-index="3" data-value="test"></span></p>`;

        testInstance.onChange(newMarkup);

        // Wait for setState callback
        jest.runAllTimers();

        expect(onModelChanged).toBeCalledWith(
          expect.objectContaining({
            slateMarkup: newMarkup,
            choices: expect.objectContaining({
              3: [{ label: 'test', value: '0' }],
            }),
          }),
        );

        jest.useRealTimers();
      });

      it.skip('slateMarkup and choices are updated with changed data-value', () => {
        jest.useFakeTimers();

        const testInstance = new Main({
          onModelChanged,
          onConfigurationChanged,
          classes: {},
          model: prepareModel({
            choices: {
              0: [
                { label: 'cow', value: '0' },
                { label: 'cattle', value: '1' },
                { label: 'calf', value: '2' },
              ],
              1: [
                { label: 'over', value: '0' },
                { label: 'past', value: '1' },
                { label: 'beyond', value: '2' },
              ],
              2: [{ label: 'moon', value: '0' }],
            },
            maxLengthPerChoice: [6, 6, 4, 2],
          }),
          configuration: sensibleDefaults.configuration,
        });

        const newMarkup = `<p>The <span data-type="explicit_constructed_response" data-index="0" data-value="rabbit"></span> jumped <span data-type="explicit_constructed_response" data-index="1" data-value="over"></span> the <span data-type="explicit_constructed_response" data-index="2" data-value="moon"></span>and <span data-type="explicit_constructed_response" data-index="3" data-value="test"></span></p>`;

        testInstance.onChange(newMarkup);

        // Wait for setState callback
        jest.runAllTimers();

        expect(onModelChanged).toBeCalledWith(
          expect.objectContaining({
            slateMarkup: newMarkup,
            choices: expect.objectContaining({
              0: [
                { label: 'rabbit', value: '0' },
                { label: 'cattle', value: '1' },
                { label: 'calf', value: '2' },
              ],
            }),
          }),
        );

        jest.useRealTimers();
      });
    });
  });
});
