// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main snapshot renders with teacher instructions, prompt and rationale even if not set 1`] = `
<div>
  <div
    data-testid="config-layout"
  >
    <div
      data-testid="input-container"
    >
      <div
        data-testid="editable-html"
      />
    </div>
    <div
      data-testid="input-container"
    >
      <div
        data-testid="editable-html"
      >
        Complete the sentence
      </div>
    </div>
    <div
      class="css-yeouz0"
    >
      <div
        class="MuiTypography-root MuiTypography-body1 css-4vetrc-MuiTypography-root"
      >
        Define Template, Choices, and Correct Responses
      </div>
      <svg
        aria-hidden="true"
        aria-label="Validation requirements:
Correct answers should not be blank.
Each answer defined for a response area should be unique.
There should be at least 1 and at most 10 response areas defined."
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1cinn38-MuiSvgIcon-root"
        data-mui-internal-clone-element="true"
        data-testid="InfoIcon"
        focusable="false"
        style="margin-left: 8px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
        />
      </svg>
    </div>
    <div
      data-testid="editable-html"
    >
      &lt;p&gt;The &lt;span data-type="explicit_constructed_response" data-index="0" data-value="cow"&gt;&lt;/span&gt; jumped &lt;span data-type="explicit_constructed_response" data-index="1" data-value="over"&gt;&lt;/span&gt; the &lt;span data-type="explicit_constructed_response" data-index="2" data-value="moon"&gt;&lt;/span&gt;&lt;/p&gt;
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 css-w8zft6-MuiTypography-root"
    >
      Define Alternates and Character Limits
    </p>
    <div
      choiceserrors="[object Object]"
      data-testid="alternate-responses"
      model="[object Object]"
      pluginprops="[object Object]"
      spellcheck="true"
    />
    <div
      data-testid="input-container"
    >
      <div
        data-testid="editable-html"
      />
    </div>
  </div>
</div>
`;

exports[`Main snapshot renders without teacher instructions, prompt and rationale 1`] = `
<div>
  <div
    data-testid="config-layout"
  >
    <div
      class="css-yeouz0"
    >
      <div
        class="MuiTypography-root MuiTypography-body1 css-4vetrc-MuiTypography-root"
      >
        Define Template, Choices, and Correct Responses
      </div>
      <svg
        aria-hidden="true"
        aria-label="Validation requirements:
Correct answers should not be blank.
Each answer defined for a response area should be unique.
There should be at least 1 and at most 10 response areas defined."
        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1cinn38-MuiSvgIcon-root"
        data-mui-internal-clone-element="true"
        data-testid="InfoIcon"
        focusable="false"
        style="margin-left: 8px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
        />
      </svg>
    </div>
    <div
      data-testid="editable-html"
    >
      &lt;p&gt;The &lt;span data-type="explicit_constructed_response" data-index="0" data-value="cow"&gt;&lt;/span&gt; jumped &lt;span data-type="explicit_constructed_response" data-index="1" data-value="over"&gt;&lt;/span&gt; the &lt;span data-type="explicit_constructed_response" data-index="2" data-value="moon"&gt;&lt;/span&gt;&lt;/p&gt;
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 css-w8zft6-MuiTypography-root"
    >
      Define Alternates and Character Limits
    </p>
    <div
      choiceserrors="[object Object]"
      data-testid="alternate-responses"
      model="[object Object]"
      pluginprops="[object Object]"
      spellcheck="true"
    />
  </div>
</div>
`;
